--- a/src/colors.css
+++ b/src/colors.css
@@ -1,9 +1,22 @@
+*
+{
+	padding: 0;
+	margin: 0;
+	border: none;
+	outline: none;
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	font-size: 12px;
+}
+
 .wrapper
 {
 	margin: auto;
-	max-width: 900px;
+	max-width: 890px;
 }
 
+/**
+ * Blocks
+ */
 .block
 {
 	display: inline-block;
@@ -14,19 +27,20 @@
 	cursor: pointer;
 }
 
-
 .b1
 {
 	float: left;
 	display: inline-block;
 	border: 0px solid red;
 }
+
 .b2
 {
 	float: left;
 	display: inline-block;
 	border: 0px solid green;
 }
+
 .b3
 {
 	float: left;
@@ -43,4 +57,6 @@
 
 .testing-pane h2
 {
+	font-family: Courier New, Courier, monospace;
+	font-size: 24px;
 }
